@@ -51,12 +51,12 @@ test_that("idempotent function equivalent to permutation",  {
   aperms <- llply(perms, function(perm) aperm(x, unique(c(perm, 1:3))))
   aaplys <- llply(perms, function(perm) aaply(x, perm, identity))
   
-  # which(mapply(function(x, y) !identical(unname(x), unname(y)), aaplys, aperms))
-
   for(i in seq_along(aperms)) {
-    expect_that(dim(aaplys[[i]]), equals(dim(aperms[[i]])))
-    expect_that(unname(dimnames(aaplys[[i]])), equals(dimnames(aperms[[i]])))
-    expect_that(aaplys[[i]], is_equivalent_to(aperms[[i]]))
+    perm <- paste(perms[[i]], collapse = ", ")
+    expect_that(dim(aaplys[[i]]), equals(dim(aperms[[i]])), perm)
+    expect_that(unname(dimnames(aaplys[[i]])), equals(dimnames(aperms[[i]])),
+      perm)
+    expect_that(aaplys[[i]], is_equivalent_to(aperms[[i]]), perm)
   }
 
 })
@@ -72,4 +72,14 @@ test_that("single column data frames work when treated as an array", {
   
   expect_that(res$X1, equals(1:2))
   expect_that(as.character(res$V1), equals(c("a1c", "a2c")))
+})
+
+test_that("aaply equivalent to apply with correct permutation", {
+  a <- matrix(seq_len(400), ncol = 20)
+  expect_that(rowMeans(a), equals(aaply(a, 1, mean), check.attr = FALSE))
+  expect_that(colMeans(a), equals(aaply(a, 2, mean), check.attr = FALSE))
+  
+  b <- structure(a, dimnames = plyr:::amv_dimnames(a))
+  expect_that(rowMeans(a), equals(aaply(a, 1, mean), check.attr = FALSE))
+  expect_that(colMeans(a), equals(aaply(a, 2, mean), check.attr = FALSE))  
 })
