@@ -1,6 +1,7 @@
 plyr 1.1 (2010-XX-XX) ---------------------------------------------------
 
 * *dply deals more gracefully with the case when all results are NULL (fixes #10)
+* *aply correctly orders output regardless of dimension names (fixes #11)
 
 plyr 1.0 (2010-07-02) ---------------------------------------------------
 
